--- a/templates/follow-sop-register.html
+++ b/templates/follow-sop-register.html
@@ -91,6 +91,15 @@
                                 {% else %}
                                     {% set span = 2 %}
                                 {% endif %}
+                            {% elif col.column_type == 'dropdown' %}
+                                {% if col.input_type == 'dropdown_multi' %}
+                                    {% set span = 8 %}
+                                {% elif col.column_span and col.column_span|int > 0 %}
+                                    {% set cs = col.column_span|int %}
+                                    {% set span = cs if cs >= 2 else 2 %}
+                                {% else %}
+                                    {% set span = 2 %}
+                                {% endif %}
                             {% elif col.column_span and col.column_span|int > 0 %}
                                 {% set cs = col.column_span|int %}
                                 {% set span = cs if cs >= 2 else 2 %}
@@ -117,22 +126,44 @@
                                     <div class="value">{{ col.default_value if col.default_value else '-' }}</div>
                                     
                                 {% elif col.column_type == 'dropdown' %}
-                                    <!-- 드롭다운 필드 -->
+                                    {% set is_multi = col.input_type == 'dropdown_multi' %}
+                                    {% set options = [] %}
+                                    {% if col.column_key in basic_options %}
+                                        {% set options = basic_options[col.column_key] %}
+                                    {% elif col.dropdown_options_mapped %}
+                                        {% set options = col.dropdown_options_mapped %}
+                                    {% endif %}
+                                    {% if is_multi %}
+                                    <div class="dropdown-multi-summary text-muted mb-1" data-summary-for="{{ col.column_key }}">-</div>
+                                    <div class="dropdown-multi-checkboxes" data-checkbox-for="{{ col.column_key }}" data-section="{{ section.section_key }}">
+                                        {% for opt in options %}
+                                        <label class="dropdown-multi-option form-check">
+                                            <input type="checkbox"
+                                                   class="form-check-input me-2 dropdown-multi-checkbox"
+                                                   value="{{ opt.code }}"
+                                                   data-multi-key="{{ col.column_key }}"
+                                                   data-section="{{ section.section_key }}">
+                                            <span class="form-check-label flex-grow-1">{{ opt.value }}</span>
+                                        </label>
+                                        {% endfor %}
+                                    </div>
+                                    <input type="hidden"
+                                           class="dropdown-multi-hidden-value"
+                                           data-field="{{ col.column_key }}"
+                                           data-section="{{ section.section_key }}"
+                                           data-field-type="dropdown_multi_hidden"
+                                           value="">
+                                    {% else %}
                                     <select id="{{ col.column_key }}" 
                                             class="{{ section.section_key|replace('_', '-') }}-input" 
                                             data-field="{{ col.column_key }}"
                                             data-section="{{ section.section_key }}">
                                         <option value="">선택하세요</option>
-                                        {% if col.column_key in basic_options %}
-                                            {% for opt in basic_options[col.column_key] %}
-                                            <option value="{{ opt.code }}">{{ opt.value }}</option>
-                                            {% endfor %}
-                                        {% elif col.dropdown_options_mapped %}
-                                            {% for opt in col.dropdown_options_mapped %}
-                                            <option value="{{ opt.code }}">{{ opt.value }}</option>
-                                            {% endfor %}
-                                        {% endif %}
+                                        {% for opt in options %}
+                                        <option value="{{ opt.code }}">{{ opt.value }}</option>
+                                        {% endfor %}
                                     </select>
+                                    {% endif %}
                                     
                                 {% elif col.column_type == 'date' %}
                                     <!-- 날짜 필드 -->
