--- a/templates/safe-workplace-detail.html
+++ b/templates/safe-workplace-detail.html
@@ -54,6 +54,15 @@
                                 {% set span = 8 %}
                             {% elif col.column_type == 'score_total' %}
                                 {% set span = 4 %}
+                            {% elif col.column_type == 'dropdown' %}
+                                {% if col.input_type == 'dropdown_multi' %}
+                                    {% set span = 8 %}
+                                {% elif col.column_span and col.column_span|int > 0 %}
+                                    {% set cs = col.column_span|int %}
+                                    {% set span = cs if cs >= 2 else 2 %}
+                                {% else %}
+                                    {% set span = 2 %}
+                                {% endif %}
                             {% elif col.column_span and col.column_span|int > 0 %}
                                 {% set cs = col.column_span|int %}
                                 {% set span = cs if cs >= 2 else 2 %}
@@ -69,20 +78,71 @@
                                 {% elif col.column_key == 'created_at' %}
                                     <input type="text" value="{{ (workplace.created_at|date_only) if workplace.created_at else '-' }}" readonly class="readonly-highlight">
                                 {% elif col.column_type == 'dropdown' %}
-                                    <select class="{{ section.section_key|replace('_', '-') }}-input"
-                                            data-field="{{ col.column_key }}"
-                                            data-section="{{ section.section_key }}">
-                                        <option value="">선택하세요</option>
+                                    {% set is_multi = col.input_type == 'dropdown_multi' %}
+                                    {% if is_multi %}
+                                        {% set options = [] %}
                                         {% if col.column_key in basic_options %}
-                                            {% for opt in basic_options[col.column_key] %}
-                                            <option value="{{ opt.code }}" {% if opt.code == value %}selected{% endif %}>{{ opt.value }}</option>
-                                            {% endfor %}
+                                            {% set options = basic_options[col.column_key] %}
                                         {% elif col.dropdown_options_mapped %}
-                                            {% for opt in col.dropdown_options_mapped %}
-                                            <option value="{{ opt.code }}" {% if opt.code == value %}selected{% endif %}>{{ opt.value }}</option>
-                                            {% endfor %}
+                                            {% set options = col.dropdown_options_mapped %}
                                         {% endif %}
-                                    </select>
+                                        {% set raw_values = [] %}
+                                        {% if value is sequence and not (value is string) %}
+                                            {% set raw_values = value | map('string') | list %}
+                                        {% elif value %}
+                                            {% set raw_values = [value|string] %}
+                                        {% endif %}
+                                        {% set selected_codes = [] %}
+                                        {% set selected_labels = [] %}
+                                        {% for rv in raw_values %}
+                                            {% for opt in options %}
+                                                {% if opt.code == rv or opt.value == rv %}
+                                                    {% if opt.code not in selected_codes %}
+                                                        {% set selected_codes = selected_codes + [opt.code] %}
+                                                        {% set selected_labels = selected_labels + [opt.value] %}
+                                                    {% endif %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endfor %}
+                                        {% set display_values = selected_labels if selected_labels else raw_values %}
+                                        <div class="dropdown-multi-summary text-muted mb-1" data-summary-for="{{ col.column_key }}">{{ display_values|join(', ') if display_values else '-' }}</div>
+                                        <div class="dropdown-multi-checkboxes" data-checkbox-for="{{ col.column_key }}" data-section="{{ section.section_key }}">
+                                            {% for opt in options %}
+                                            <label class="dropdown-multi-option form-check">
+                                                <input type="checkbox"
+                                                       class="form-check-input me-2 dropdown-multi-checkbox"
+                                                       value="{{ opt.code }}"
+                                                       data-multi-key="{{ col.column_key }}"
+                                                       data-section="{{ section.section_key }}"
+                                                       {% if opt.code in selected_codes %}checked{% endif %}>
+                                                <span class="form-check-label flex-grow-1">{{ opt.value }}</span>
+                                            </label>
+                                            {% endfor %}
+                                        </div>
+                                        <input type="hidden"
+                                               class="dropdown-multi-hidden-value"
+                                               data-field="{{ col.column_key }}"
+                                               data-section="{{ section.section_key }}"
+                                               data-field-type="dropdown_multi_hidden"
+                                               value="{{ selected_codes|tojson if selected_codes else '' }}">
+                                    {% else %}
+                                        {% set single_value = value|string if value is not none else '' %}
+                                        <select class="{{ section.section_key|replace('_', '-') }}-input"
+                                                id="{{ col.column_key }}"
+                                                data-field="{{ col.column_key }}"
+                                                data-section="{{ section.section_key }}">
+                                            <option value="">선택하세요</option>
+                                            {% if col.column_key in basic_options %}
+                                                {% for opt in basic_options[col.column_key] %}
+                                                <option value="{{ opt.code }}" {% if opt.code == single_value %}selected{% endif %}>{{ opt.value }}</option>
+                                                {% endfor %}
+                                            {% elif col.dropdown_options_mapped %}
+                                                {% for opt in col.dropdown_options_mapped %}
+                                                <option value="{{ opt.code }}" {% if opt.code == single_value %}selected{% endif %}>{{ opt.value }}</option>
+                                                {% endfor %}
+                                            {% endif %}
+                                        </select>
+                                    {% endif %}
                                 {% elif col.column_type == 'date' %}
                                     <input type="date"
                                            class="{{ section.section_key|replace('_', '-') }}-input"
