--- a/templates/safety-instruction-detail-fixed.html
+++ b/templates/safety-instruction-detail-fixed.html
@@ -51,24 +51,48 @@
                         {% if col.column_key == 'issue_number' %}
                             <div class="value">{{ col_value or '-' }}</div>
                         {% elif col.column_type == 'dropdown' %}
+                            {% set is_multi = col.input_type == 'dropdown_multi' %}
+                            {% set selected_values = [] %}
+                            {% if is_multi %}
+                                {% if col_value is sequence and not (col_value is string) %}
+                                    {% set selected_values = col_value | map('string') | list %}
+                                {% elif col_value %}
+                                    {% set selected_values = [col_value|string] %}
+                                {% endif %}
+                            {% endif %}
+                            {% set single_value = col_value|string if col_value is not none else '' %}
                             <select class="{% if section.section_key == 'basic_info' %}basic-info{% elif section.section_key == 'violation_info' %}violation-info{% elif section.section_key == 'additional' %}additional{% else %}{{ section.section_key|replace('_', '-') }}{% endif %}-input" 
                                     data-field="{{ col.column_key }}"
-                                    data-section="{{ section.section_key }}">
-                                <option value="">선택하세요</option>
+                                    data-section="{{ section.section_key }}"
+                                    {% if is_multi %}multiple size="6" data-field-type="dropdown_multi"{% endif %}>
+                                {% if not is_multi %}<option value="">선택하세요</option>{% endif %}
                                 {% if col.column_key in basic_options %}
                                     {% for opt in basic_options[col.column_key] %}
-                                    <option value="{{ opt.code }}" {% if opt.code == col_value %}selected{% endif %}>
+                                    <option value="{{ opt.code }}"
+                                            {% if is_multi %}
+                                                {% if opt.code in selected_values %}selected{% endif %}
+                                            {% else %}
+                                                {% if opt.code == single_value %}selected{% endif %}
+                                            {% endif %}>
                                         {{ opt.value }}
                                     </option>
                                     {% endfor %}
                                 {% elif col.dropdown_options_mapped %}
                                     {% for opt in col.dropdown_options_mapped %}
-                                    <option value="{{ opt.code }}" {% if opt.code == col_value %}selected{% endif %}>
+                                    <option value="{{ opt.code }}"
+                                            {% if is_multi %}
+                                                {% if opt.code in selected_values %}selected{% endif %}
+                                            {% else %}
+                                                {% if opt.code == single_value %}selected{% endif %}
+                                            {% endif %}>
                                         {{ opt.value }}
                                     </option>
                                     {% endfor %}
                                 {% endif %}
                             </select>
+                            {% if is_multi %}
+                            <small class="text-muted d-block mt-1">여러 값을 선택하려면 Ctrl(또는 ⌘) 키를 누른 채 클릭하세요.</small>
+                            {% endif %}
                         {% elif col.column_type == 'date' %}
                             <input type="date" 
                                    class="{% if section.section_key == 'basic_info' %}basic-info{% elif section.section_key == 'violation_info' %}violation-info{% elif section.section_key == 'additional' %}additional{% else %}{{ section.section_key|replace('_', '-') }}{% endif %}-input" 
